feat: [FastAPI->Bento] 요청 도메인 서비스명, 포트번호 변경

--- a/fastapi/app/Dockerfile
+++ b/fastapi/app/Dockerfile
@@ -1,6 +1,7 @@
 FROM python:3.10-slim-bullseye
 
-ENV APP_HOME /app
+ARG SVC_NAME
+ENV APP_HOME /${SVC_NAME}}/app
 RUN apt update && apt -y install git vim curl
 COPY . ${APP_HOME}
 WORKDIR ${APP_HOME}
