feat: fastapi app 리팩토링, 파이프라인 테스트트

--- a/serving/tabular-iris-multi-classifier/bento-ml/bentofile.yaml
+++ b/serving/tabular-iris-multi-classifier/bento-ml/bentofile.yaml
@@ -12,4 +12,4 @@ python:
     - numpy
 # sector that don't need to modify
 models:
-  - tabular-iris-clf-bento:latest
+  - tabular-iris-multi-classifier-bento-model:latest
