test: jenkins tutorial

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,11 +1,27 @@
-/* Requires the Docker Pipeline plugin */
 pipeline {
-    agent { docker { image 'python:3.12.1-alpine3.19' } }
+    agent any 
     stages {
-        stage('build') {
+        stage('Build') {
             steps {
                 sh 'echo "Hello zedd"'
+                sh '''
+                    echo "home-mlops tutorial
+                    ls -lah
+                '''
             }
         }
     }
 }
+
+
+/* Requires the Docker Pipeline plugin */
+// pipeline {
+//     agent { docker { image 'python:3.12.1-alpine3.19' } }
+//     stages {
+//         stage('build') {
+//             steps {
+//                 sh 'echo "Hello zedd"'
+//             }
+//         }
+//     }
+// }
