test: jenkins tutorial

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,27 +1,10 @@
 pipeline {
-    agent any 
+    agent { docker { image 'python:3.12.1-alpine3.19' } }
     stages {
-        stage('TEST') {
+        stage('Build') {
             steps {
-                sh 'echo Hello SUCCESS!'
+                sh 'python -V'
             }
-        }
-    }
-    post {
-        always {
-            echo "verbose always"
-        }
-        success {
-            echo "verbose success"
-        }
-        failure {
-            echo "verbose failure"
-        }
-        unstable {
-            echo "verbose unstable"
-        }
-        changed {
-            echo "verbose changed!"
         }
     }
 }
