--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,9 +1,19 @@
 pipeline {
-    agent { docker { image 'python:3.12.1-alpine3.19' } }
+    agent {
+        label '!windows'
+    }
+
+    environment {
+        DISABLE_AUTH = 'true'
+        DB_ENGINE = 'mysql'
+    }
+
     stages {
-        stage('Build') {
+        stage('build') {
             steps {
-                sh 'python -V'
+                echo "DB Engine is ${DB_ENGINE}"
+                echo "DISABLE_AUTH is ${DISABLE_AUTH}"
+                sh 'printenv'
             }
         }
     }
