test: jenkins tutorial

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,19 +1,22 @@
 pipeline {
-    agent {
-        label '!windows'
-    }
-
-    environment {
-        DISABLE_AUTH = 'true'
-        DB_ENGINE = 'mysql'
-    }
-
+    agent any
     stages {
-        stage('build') {
+        stage('Deploy - Staging') {
             steps {
-                echo "DB Engine is ${DB_ENGINE}"
-                echo "DISABLE_AUTH is ${DISABLE_AUTH}"
-                sh 'printenv'
+                sh './deploy staging'
+                sh './run-smoke-tests'
+            }
+        }
+
+        stage('Sanity check') {
+            steps {
+                input "Does the staging environment look ok?"
+            }
+        }
+
+        stage('Deploy - Production') {
+            steps {
+                sh './deploy production'
             }
         }
     }
