test: check pwd, ls

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,9 +1,9 @@
 pipeline {
-    agent { docker { image 'python:3.12.1-alpine3.19' } }
+    agent any
     stages {
-        stage('build') {
+        stage('Check pwd') {
             steps {
-                sh 'echo "Hello zedd"'
+                sh 'pwd && ls -l'
             }
         }
     }
