test: jenkins cicd

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -8,9 +8,7 @@ pipeline {
     stages {
         stage('Moving directory') {
             steps {
-                sh 'cd serving/${APP_NAME} && pwd && ls -l'
-            },
-            steps {
+                sh 'cd serving/${APP_NAME} && ls -l'
                 sh 'pwd'
             }
         }
