--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -12,8 +12,7 @@ pipeline {
     stages {
         stage('Build bento') {
             steps {
-                sh 'cd serving && ls -l'
-                sh 'echo $(pwd) && ls -l'
+                sh '$(pwd)/serving/bento.sh ${APP_NAME} ${EXPERIMENT_ID} ${RUN_ID} ${NAS_NAME} ${AR_NAME}'
             }
         }
     }
