--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -10,13 +10,13 @@ pipeline {
     agent {
         docker {
             image 'google/cloud-sdk:alpine'
-            args '-v $SA_KEY_PATH:/tmp/gcloud/application_default_credentials/json'
+            args '-v $SA_KEY_PATH:/tmp/gcloud/application_default_credentials.json'
         }
     }
     stages {
         stage('Authenticate') {
             steps {
-                sh 'whoami'
+                sh 'gcloud auth activate-service-account --key-file=/tmp/gcloud/application_default_credentials.json'
             }
         }
     }
