test: jenkins cicd

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -11,6 +11,7 @@ pipeline {
         docker {
             image 'google/cloud-sdk:alpine'
             args '-v $SA_KEY_PATH:/tmp/gcloud/application_default_credentials.json'
+            args '-u root'
         }
     }
     stages {
