test: jenkins cicd

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
     stages {
         stage('Authenticate') {
             steps {
-                sh 'gcloud auth activate-service-account --key-file=/tmp/gcloud/application_default_credentials.json'
+                sh 'ls -l /tmp/gcloud'
             }
         }
     }
