--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -10,8 +10,14 @@ pipeline {
     agent {
         docker {
             image 'google/cloud-sdk:alpine'
-            args '-v $SA_KEY_PATH:/tmp/application_default_credentials.json'
             args '-u root'
+            volumes {
+                hostPath {
+                    path '${SA_KEY_PATH}'
+                    type 'File'
+                mountPath '/tmp/application_default_credentials.json'
+                }
+            }
         }
     }
     stages {
