--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -5,6 +5,7 @@ pipeline {
         RUN_ID = 'd196fa50c0224982ab346d8d18934059'
         NAS_NAME = 'gs://zedd-mlruns'
         AR_NAME = 'jo181/bentoml-serving'
+        CLOUDSDK_CONFIG = '${env.WORKSPACE}'
     }
 
     agent {
@@ -18,8 +19,7 @@ pipeline {
         stage('Authenticate') {
             steps {
                 sh 'ls -l /tmp/gcloud'
-                sh 'gcloud config configurations create zedd'
-                sh 'gcloud config configurations activate zedd'
+                echo '${CLOUDSDK_CONFIG}'
                 sh 'gcloud auth activate-service-account --key-file=/tmp/gcloud/test-key.json'
             }
         }
