test: jenkins cicd

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -19,8 +19,9 @@ pipeline {
         stage('Authenticate') {
             steps {
                 sh 'ls -l /tmp/gcloud'
-                sh 'echo $CLOUDSDK_CONFIG'
+                echo '$CLOUDSDK_CONFIG'
                 sh 'gcloud auth activate-service-account --key-file=/tmp/gcloud/test-key.json'
+                sh 'ls -R /tmp'
             }
         }
     }
