test: jenkins cicd

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -19,8 +19,9 @@ pipeline {
             steps {
                 sh '''
                 gcloud auth activate-service-account --key-file=/tmp/gcloud/application_default_credentials.json
-                gsutil cp -r gs://zedd-mlruns/899851889820856353/d196fa50c0224982ab346d8d18934059 serving/${APP_NAME}/bento-ml
-                ls -l serving/${APP_NAME}/bento-ml
+                mkdir jenkins-test-dir
+                gsutil cp -r ${NAS_NAME}/${EXPERIMENT_ID}/${RUN_ID} jenkins-test-dir
+                ls -l jenkins-test-dir
                 '''
                 
             }
