--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -20,7 +20,7 @@ pipeline {
                 sh '''
                 gcloud auth activate-service-account --key-file=/tmp/gcloud/application_default_credentials.json
                 mkdir jenkins-test-dir
-                gsutil cp -r ${NAS_NAME}/${EXPERIMENT_ID}/${RUN_ID} jenkins-test-dir
+                gsutil -D cp -r ${NAS_NAME}/${EXPERIMENT_ID}/${RUN_ID} jenkins-test-dir
                 ls -l jenkins-test-dir
                 '''
                 
