--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -19,6 +19,7 @@ pipeline {
             steps {
                 sh '''
                 echo $(pwd)
+                export CLOUDSDK_CONFIG=/tmp
                 gcloud auth activate-service-account --key-file=/tmp/gcloud/application_default_credentials.json
                 gsutil -D cp -r ${NAS_NAME}/${EXPERIMENT_ID}/${RUN_ID} jenkins-test-dir
                 ls -l jenkins-test-dir
