test: jenkins/dev

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -14,6 +14,7 @@ pipeline {
             steps {
                 sh '''
                 gcloud auth activate-service-account --key-file=${SA_KEY_PATH}
+                gsutil cp -r ${NAS_NAME}/${EXPERIMENT_ID}/${RUN_ID} serving/${APP_NAME}/bento-ml
                 '''
                 // sh 'gsutil cp -r ${NAS_NAME}/${EXPERIMENT_ID}/${RUN_ID} serving/${APP_NAME}/bento-ml'
                 sh 'ls -l serving/${APP_NAME}/bento-ml'
