test: build bento

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -5,10 +5,10 @@ pipeline {
         RUN_ID = 'd196fa50c0224982ab346d8d18934059'
         NAS_NAME = 'gs://zedd-mlruns'
         AR_NAME = 'jo181/bentoml-serving'
-        CLOUDSDK_CONFIG = '/tmp'
     }
 
     agent any
+
     stages {
         stage('Download from GCS') {
             steps {
@@ -20,42 +20,10 @@ pipeline {
                 '''
             }
         }
-        stage('Check') {
+        stage('Build Bento') {
             steps {
-                sh 'ls -l serving/${APP_NAME}/bento-ml'
+                sh './serving/bento.sh ${APP_NAME} ${EXPERIMENT_ID} ${RUN_ID} ${AR_NAME}'
             }
         }
         }
 }
-
-// pipeline {
-//     environment {
-//         APP_NAME = 'tabular-diabetes-regressor'
-//         EXPERIMENT_ID = '899851889820856353'
-//         RUN_ID = 'd196fa50c0224982ab346d8d18934059'
-//         NAS_NAME = 'gs://zedd-mlruns'
-//         AR_NAME = 'jo181/bentoml-serving'
-//         CLOUDSDK_CONFIG = '/tmp'
-//     }
-
-//     agent {
-//         docker {
-//             image 'google/cloud-sdk:alpine'
-//             args '-v $SA_KEY_PATH:/tmp/gcloud/application_default_credentials.json'
-//             }
-//     }
-//     stages {
-//         stage('Authenticate') {
-//             steps {
-//                 sh '''
-//                 echo $(pwd)
-//                 export CLOUDSDK_CONFIG=/tmp
-//                 gcloud auth activate-service-account --key-file=/tmp/gcloud/application_default_credentials.json
-//                 gsutil -D cp -r ${NAS_NAME}/${EXPERIMENT_ID}/${RUN_ID} jenkins-test-dir
-//                 ls -l jenkins-test-dir
-//                 '''
-                
-//             }
-//         }
-//     }
-// }
